# viceroy

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: release.yml
src/: installer.rs  lib.rs  main.rs  manifest.rs
src/installer/: git.rs  install.rs
src/manifest/: skill.rs
src/manifest/skill/: analysis.rs  model.rs  skill.rs  skill_structure_tree.rs
