[package]
name = "pretor-viceroy"
version = "0.1.1"
authors = ["zhaoxi826"]
description = "A high-performance skill installer and analysis tool for Pretor Multi-Agent system."
homepage = "https://github.com/zhaoxi826/viceroy"
repository = "https://github.com/zhaoxi826/viceroy"
license = "Apache-2.0"
readme = "README.md"
edition = "2024"

[lib]
name = "viceroy"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", rev = "v0.4.0" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", rev = "v0.4.0" }
regex = "1.12.3"
serde_yaml = "0.9.34"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread", "macros"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
